--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: International Health Systems Group (IHSG), University of Cambridge
+description: Home of the International Health Systems Group (IHSG), University of Cambridge
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://ihsgcam.github.io/home
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
