--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: International Health Systems Group (IHSG), University of Cambridge
-description: Home of the International Health Systems Group (IHSG), University of Cambridge
+description: Home of the International Health Systems Group (IHSG), Department of Engineering, University of Cambridge
 theme: just-the-docs
 
 url: https://ihsgcam.github.io/home
